# Telegram-Crypto-Alerts

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-swarm.yml  docker-compose.yml  pyproject.toml  release.ps1
docs/: CHANGELOG.md
src/: __main__.py  config.py  docker_helpers.py  indicators.py  logger.py  mongo.py  setup.py  telegram.py  telegram_bot.py  user_configuration.py  utils.py
src/alert_processes/: base.py  cex.py  technical.py
src/resources/: commands.txt
